# blur-it

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/commands/: clipboard.rs  file.rs  image.rs  mod.rs
src/components/: EmptyState.tsx
src/components/ActionBar/: ActionBar.tsx
src/components/Canvas/: ImageCanvas.tsx
src/components/RegionList/: RegionList.tsx
src/components/Toolbar/: Toolbar.tsx
src/hooks/: useKeyboard.ts  useRegionSelection.ts
src/lib/: commands.ts  effects.ts  regions.ts  tauri-api.ts
src/stores/: appStore.ts
src/styles/: global.css
