[package]
name = "blur-it"
version = "0.1.0"
description = "Cross-platform mosaic/blur desktop app"
authors = ["jimin"]
edition = "2021"

[lib]
name = "blur_it_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
imageproc = "0.25"
base64 = "0.22"
